frontend/frontend/src/components/Services/components/SearchServices.css
.search-services {
    padding-inline: min(5vw, 5rem);
    padding-block: 1.5rem min(8vh, 8rem);
    /* font-family: Georgia, 'Times New Roman', Times, serif; */
    font-family: "Roboto", serif;
    /* background-color: var(--bc-darkBlue); */
    background-color: var(--bc-lightBlue);
    color: white;
    /* color: black; */
    
    
}

.search-header-wrapper {
    /* border: 1px solid red; */
    text-align: center;
    padding: min(1.25vh, 1.25rem) min(5vh, 5rem);
    margin-bottom: 1rem;
    text-align: center;
    /* background-color: var(--bc-middleBlue);
    color: white; */
}
.search-header-wrapper h3 {
    /* font-size: var(--fs-fortyEight); */
    font-size: clamp(var(--fs-fortyEight), 3.75vw,var(--fs-sixty));
    padding: min(1vh, 1rem) min(2vw, 2rem);
    margin: 0 auto;
    /* padding: 1rem; */
}

.search-header-wrapper span {
    font-size: clamp(var(--fs-sixteen), 1.5vw, var(--fs-eighteen));
    padding: min(2.5vh, 2.5rem) min(2.5vw, 2.5rem);
    text-wrap: wrap;
}

.search-services-card-wrapper {
    gap: 1rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(10rem, 1fr))
    /* background-color: var(--bc-lightBlue); */
    /* color: white; */
}

.card {
    border: 1px solid white;
    padding: min(1.5vw, 1.5rem) min(1.5vw, 1.5rem);
    height: 58vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: left;
    line-height: 1.5;
    text-align: left;
    transition: background-color .25s ease;
    border-radius: 2rem;
}

.card:hover {
    background-color: var(--bc-darkerBlue)
}




.icon {
    /* border: 1px solid white; */
    max-height: 5rem;
    max-width: 6rem;
    stroke: white;

    display: block;
    border-radius: 2rem;
}


.card h4 {
    /* border: 1px solid red; */
    margin-block: .5rem;
    /* font-size: clamp(var(--fs-twentyFour), 1.875vw, var(--fs-thirty)) */
    font-size: clamp(var(--fs-eighteen), 1.125vw, var(--fs-twentyFour))
}

.card p {
    /* font-size: clamp(var(--fs-fourteen), 1.125vw, var(--fs-eighteen)); */
    margin-block: .5rem;
    /* padding: min(.5vw, .5rem) min(1vw, 1rem); */
    /* border: 1px solid white; */
}

@media (max-width: 75em) {

    /* .search-services {
        padding-inline: min(3vw, 3rem);
    } */
    .search-services-card-wrapper {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
        

    }

    .search-header-wrapper span {
        font-size: clamp(var(--fs-eighteen), 1.5vw, var(--fs-twentyFour));
        /* border: 1px solid red; */
        padding: 1rem;
    }

    .card {
        padding: min(3vw, 3rem) min(3vw, 3rem);
        height: 50vh
    }


    .card h4 {
        font-size: clamp(var(--fs-twentyFour), 1.875vw, var(--fs-thirty))
    }

    .card p {
        margin: 0;
        padding: min(.5vw, .5rem) min(1vw, 1rem);
    }


}
/* 900px */
@media (max-width: 56.25em) {

    .search-services {
        padding-inline: min(4vw, 4rem);
       

    }
    .search-services-card-wrapper {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
        grid-template-rows: repeat(4, 1fr)
    }

    .card {
        padding: min(3vw, 3rem) min(2vw, 2rem);
        text-align: center;
        align-items: center;
        max-height: 40vh;

    }


    .card h4 {
        font-size: clamp(var(--fs-thirty), 2.25vw, var(--fs-thirtySix))
    }

    .card p {
        /* font-size: clamp(var(--fs-twentyFour), 1.875vw, var(--fs-thirty)); */
        margin: 0;
        padding: min(1vw, 1rem) min(1vw, 1rem);
    }
    
    .icon {
        min-width: 8rem;
    }
}


/* 600px */
@media (max-width: 37.5em) {
    /* .card p {
        font-size: clamp(var(--fs-eighteen), 1.5vw, var(--fs-twentyFour));

    } */
     .card {
        max-height: 50vh;
     }
}

